# IntentRecognizer

./: CMakeLists.txt  README.md  main.cpp
data/: dataset.json  stopwords.txt
scripts/: run_main.sh  run_utest.sh
source/: CMakeLists.txt
source/header/: InputProcessor.h  ResourceProcessor.h  Utils.h
source/src/: InputProcessor.cpp  ResourceProcessor.cpp  Utils.cpp
utest/: CMakeLists.txt  UnitTest.cpp
